@@ -22,6 +22,6 @@ __docformat__ = "restructuredtext en"
 
 from generic import CacheManager, KeyValueStoreCacheManager
 try:
-    from xapian_manager import XapianCacheManager
+    from xapian_manager import XapianCacheManager, XapianSelfInvertingCacheManager
 except ImportError:
     pass
