@@ -1,3 +1,9 @@
+Sun Nov 08 11:20:27 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/cachemanager/__init__.py,xappy/cachemanager/xapian_manager.py:
+	  Add CacheManager implementation which uses a secondary Xapian
+	  database to perform the inversion.
+
 Sun Nov 08 11:17:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/perftest/cachemanager.py,xappy/perftest/harness.py: Add
